fix: getLast()대신 get으로 마지막 요소 접근